@@ -5,7 +5,23 @@ def validateVName(name):
     RRDTool vnames must be made up strings of the following characters:
          A-Z, a-z, 0-9, -,_ 
     and have a maximum length of 255 characters.
+    >>> vname = validateVName('Zaphod Beeble-Brox!')
+    Traceback (most recent call last):
+    ValueError: Names must consist only of the characters A-Z, a-z, 0-9, -, _
+    >>> vname = validateVName('Zaphod_Beeble-Brox')
+    >>> vname = validateVName('a'*32)
+    >>> vname = validateVName('a'*254)
+    >>> vname = validateVName('a'*255)
+    >>> vname = validateVName('a'*256)
+    Traceback (most recent call last):
+    ValueError: Names must be shorter than 255 characters
     '''
+    if name != re.sub('[^A-Za-z0-9_-]', '', name):
+        raise ValueError, "Names must consist only of the characters " + \
+            "A-Z, a-z, 0-9, -, _"
+    if len(name) > 255:
+        raise ValueError, "Names must be shorter than 255 characters"
+    return name
 
 class DataDefinition(object):
     '''
@@ -18,7 +34,7 @@ class DataDefinition(object):
     of this data is the same as for the graph by default, you can
     override this by specifying start and end. Remember to escape
     colons in the time specification!
-
+    
     If the resolution of the data is higher than the resolution of
     the graph, the data will be further consolidated. This may
     result in a graph that spans slightly more time than requested.
@@ -27,20 +43,65 @@ class DataDefinition(object):
     resolution of 1800 seconds per CDP, you should create an image
     with width 400 and time span 400*1800 seconds (use appropriate
     start and end times, such as --start end-8days8hours).
-
+    
     If consolidation needs to be done, the CF of the RRA specified
     in the DEF itself will be used to reduce the data density. This
     behaviour can be changed using :reduce=<CF>. This optional
     parameter specifies the CF to use during the data reduction
     phase.
-    '''
-    def serialize(self):
-        '''
-	A method for preparing the class's data for use with RRDTool.
+    
+    >>> def1 = DataDefinition(vname='ds0a', 
+    ... rrdfile='/home/rrdtool/data/router1.rrd', ds_name='ds0',
+    ... cdef='AVERAGE')
+    >>> def1
+    DEF:ds0a=/home/rrdtool/data/router1.rrd:ds0:AVERAGE
+    >>> def1.__repr__()
+    'DEF:ds0a=/home/rrdtool/data/router1.rrd:ds0:AVERAGE'
 
-	Time representations must have their ':'s escaped, since
-	the colon is the RRDTool separator for parameters.
+    >>> def2 = DataDefinition(rrdfile='/home/rrdtool/data/router1.rrd')
+    >>> def2.vname = 'ds0b'
+    >>> def2.ds_name = 'ds0'
+    >>> def2.cdef = 'AVERAGE'
+    >>> def2.step = 1800
+    >>> def2
+    DEF:ds0b=/home/rrdtool/data/router1.rrd:ds0:AVERAGE:step=1800
+
+    >>> def3 = DEF(vname='ds0c', ds_name='ds0', step=7200)
+    >>> def3.rrdfile = '/home/rrdtool/data/router1.rrd'
+    >>> def3
+    DEF:ds0c=/home/rrdtool/data/router1.rrd:ds0:AVERAGE:step=7200
+    '''
+    def __init__(self, vname='', rrdfile='', ds_name='', cdef='AVERAGE',
+        step=None, start=None, end=None, reduce=None):
+        self.vname = validateVName(vname)
+        self.rrdfile = rrdfile
+        self.ds_name = ds_name
+        self.cdef = cdef
+        self.step = step
+        self.start = start
+        self.end = end
+        self.reduce = reduce
+
+    def __repr__(self):
         '''
+	We override this method for preparing the class's data for
+	use with RRDTool.
+
+        Time representations must have their ':'s escaped, since
+        the colon is the RRDTool separator for parameters.
+        '''
+        main = 'DEF:%(vname)s=%(rrdfile)s:%(ds_name)s:%(cdef)s' % self.__dict__
+        tail = ''
+        if self.step:
+            tail += ':step=%s' % self.step
+        if self.start:
+            tail += ':start=%s' % self.start
+        if self.end:
+            tail += ':end=%s' % self.end
+        if self.reduce:
+            tail += ':reduce=%s' % self.reduce
+        return main+tail
+
 DEF = DataDefinition
 
 class VariableDefinition(object):
@@ -60,7 +121,7 @@ class VariableDefinition(object):
     Note that currently only agregation functions work in VDEF rpn
     expressions (a limitation of RRDTool, not PyRRD).
     '''
-VDEF = ValueDefinition
+VDEF = VariableDefinition
 
 class CalculationDefinition(object):
     '''
@@ -76,7 +137,7 @@ class CalculationDefinition(object):
     on in the script, just as if it were generated by a DEF
     instruction.
     '''
-CDEF = MemoryDefinition
+CDEF = CalculationDefinition
 
 class GraphPrint(object):
     '''
@@ -220,11 +281,11 @@ class Graph(object):
     to graph it (or print it). This ends the rrdtool graph sequence.
     '''
     def __init__(self, filename, start=None, end=None, step=None, 
-        title='', vertical_label='', width=None, hight=None,
+        title='', vertical_label='', width=None, height=None,
         only_graph=None, upper_limit=None, lower_limit=None,
         rigid=False, alt_autoscale=None, alt_autoscale_max=None,
         no_gridfit=False, x_grid=None, y_grid=None, 
-        alt_y_grid=False, logarithmic=False, units-exponent=None,
+        alt_y_grid=False, logarithmic=False, units_exponent=None,
         units_length=None, lazy=False, imginfo=None, color=None,
         zoom=None, font=None, font_render_mode=None,
         font_smoothing_threshold=None, slope_mode=None,
@@ -237,3 +298,11 @@ class Graph(object):
         if filename.strip() == '-':
             # send to stdout
             pass
+
+def _test():
+    import doctest, graph
+    return doctest.testmod(graph)
+
+if __name__ == '__main__':
+    _test()
+
